// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keeps ESM default import when binding is referenced via CJS export 1`] = `
"import blank from './blank.jpg';
const __mkPreval = { backgroundImage: blank };
module.exports = { __mkPreval };"
`;

exports[`keeps ESM import when binding is referenced via CJS export 1`] = `
"import { colorBlue } from './consts';
const __mkPreval = { color: colorBlue };
module.exports = { __mkPreval };"
`;

exports[`keeps class with constructor references to imports and sibling exports 1`] = `
"import { baseHeight } from './base';
import { labels } from './labels';

export const defaults = {
    transparent: 'transparent'
};

export class Config {
    constructor(){
        this.height = baseHeight;
        this.color = labels.highlight;
        this.fallback = defaults.transparent;
    }
}

export const config = new Config();"
`;

exports[`keeps export const declarators 1`] = `"export const colorBlue = 'blue';"`;

exports[`keeps export-all re-exports when referenced export is not found locally 1`] = `
"export * from './colors';
"
`;

exports[`keeps identifiers inside template literals 1`] = `
"const color = 'red';
const result = \`color is \${color}\`;
exports.__linariaPreval = [result];"
`;

exports[`keeps identifiers used as computed property keys 1`] = `
"const selector = '& .foo';
const styles = { [selector]: { color: 'red' } };
exports.__linariaPreval = [styles];"
`;

exports[`keeps identifiers used as spread arguments 1`] = `
"const shared = { display: 'flex' };
const styles = { ...shared, color: 'red' };
exports.__linariaPreval = [styles];"
`;

exports[`keeps multiple export const declarators 1`] = `
"export const className = 'component-foo';
export const selector = '& .component-bar';"
`;

exports[`keeps objects as is 1`] = `
"const fill1 = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left,
});

const fill2 = (top = 0, left = 0, right = 0, bottom = 0) => {
  return {
    position: 'absolute',
    top,
    right,
    bottom,
    left,
  };
};

exports.__linariaPreval = [fill1, fill2];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
const a = color || anotherColor;
color.green = '#0f0';
exports.__linariaPreval = [a];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
color.green = '#0f0';
exports.__linariaPreval = [anotherColor];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"const { whiteColor: color, anotherColor } = require('…');
color.green = '#0f0';
exports.__linariaPreval = [color];"
`;

exports[`keeps only referenced re-exports from barrel files 1`] = `
"export { colorBlue, colorGreen } from './colors';
"
`;

exports[`keeps reused exports 1`] = `
"const bar = function() {
  return 'hello world';
};
exports.bar = bar;

const foo = exports.bar();
exports.__linariaPreval = [foo];"
`;

exports[`removes all 1`] = `
"
exports.__linariaPreval = [];"
`;

exports[`shakes assignment patterns 1`] = `
"const [identifier = 1] = [2];
const [{...object} = {}] = [{ a: 1, b: 2 }];
const [[...array] = []] = [[1,2,3,4]];
const obj = { member: null };
exports.__linariaPreval = [identifier, object, array, obj];"
`;

exports[`shakes es5 exports 1`] = `
""use strict";
Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.redColor = 'red';
exports['yellowColor'] = 'yellow';
Object.defineProperty(exports, "greenColor", {
  enumerable: true,
  get: function get() {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"import { whiteColor as color } from '…';
export const a = color;
exports.__linariaPreval = [a];"
`;

exports[`shakes for-in statements 1`] = `
"const obj1 = { a: 1, b: 2 };
const obj2 = {};
for (const key in obj1) {
  obj2[key] = obj1[key];
}
exports.__linariaPreval = [obj2];"
`;

exports[`shakes imports 1`] = `
"import { whiteColor as color } from '…';
import defaultColor from '…';
exports.__linariaPreval = [color, defaultColor];"
`;

exports[`shakes sequence expression 1`] = `
"const color1 = (() => 'blue');
let local = '';
const color2 = (local = color1(), () => local);
exports.__linariaPreval = [color2];"
`;

exports[`should keep member expression key 1`] = `
"const key = 'blue';
const obj = { blue: '#00F' };
const blue = obj[key];
exports.__linariaPreval = [blue];"
`;
